[metadata]
version = attr:dragodis.__version__
description = A universal interface for running scripts under multiple disassemblers.
long-description-content-type = text/markdown
long-description = file:README.md

[tool:pytest]
testpaths =
    tests
    docs
addopts =
    --doctest-glob="*.rst"
    --doctest-continue-on-failure
