[metadata]
name = dragodis
version = attr:dragodis.__version__
author = DC3
license = MIT
url = https://github.com/dod-cyber-crime-center/dragodis
description = A universal interface for running scripts under multiple disassemblers.
long_description_content_type = text/markdown
long_description = file:README.md
keywords = malware, ida, idapro, ghidra, disassembler
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    bytesparse
    capstone
    rpyc
    pyhidra>=0.4.0
    pywin32; platform_system == 'Windows'
    pefile
    pyelftools

[options.extras_require]
testing =
    pytest>=3.0.0
    pytest-datadir

[tool:pytest]
required_plugins = pytest-datadir
testpaths =
    tests
    docs
addopts =
    --doctest-glob="*.rst"
    --doctest-continue-on-failure
    -p no:faulthandler
